[package]
name = "llamapun"
version = "0.2.3"
edition = "2018"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>", "Jan Frederik Schaefer <j.schaefer@jacobs-university.de>"]

[lib]
name = "llamapun"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies.rustmorpha]
git = "https://github.com/jfschaefer/rust-morpha.git"

[dependencies.rust-senna]
git = "https://github.com/jfschaefer/rust-senna.git"
version = "*"

[dependencies]
libc = "0.2"
regex = "0.2"
time = "0.1"
walkdir = "2"
gnuplot = "0.0.21"
unidecode = "0.2"
rust-crypto = "0.2"
lazy_static = "0.1"
libxml = "0.2.9"
tar = "0.4"