[package]
name = "llamapun"
version = "0.3.1"
edition = "2018"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>", "Jan Frederik Schaefer <j.schaefer@jacobs-university.de>"]

[lib]
name = "llamapun"
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies.rustmorpha]
git = "https://github.com/jfschaefer/rust-morpha.git"

[dependencies.rust-senna]
git = "https://github.com/jfschaefer/rust-senna.git"
version = "*"

[dependencies]
libc = "0.2"
regex = "1.1"
time = "0.1"
walkdir = "2"
gnuplot = "0.0.31"
unidecode = "0.3"
rust-crypto = "0.2"
lazy_static = "1.3"
libxml = "0.2.11"
tar = "0.4"
rayon = "1.0"
jwalk = "0.4"

[dev-dependencies]
serde_json = "1.0"
